--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,27 +1,28 @@
 {
-    "files.autoSaveDelay": 500,
-    "files.autoSave": "afterDelay",
-    "files.autoGuessEncoding": true,
-    "editor.quickSuggestions": {
-        "other": "on",
-        "comments": "off",
-        "strings": "on"
-    },
-    "editor.tabSize": 2,
-    "editor.formatOnSave": true,
-    "prettier.semi": true,
-    "javascript.format.insertSpaceBeforeFunctionParenthesis": true,
-    "vetur.format.defaultFormatter.html": "js-beautify-html",
-    "vetur.format.defaultFormatter.js": "vscode-typescript",
-    "vetur.format.defaultFormatterOptions": {
-        "js-beautify-html": {
-            "wrap_attributes": "force-aligned"
-        }
-    },
-    "eslint.validate": ["javascript", "html", "vue"],
-    "eslint.nodePath": "C:\\Program Files\\nodejs",
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "prettier.bracketSameLine": true,
-    "prettier.tabWidth": 2,
-    "editor.tabCompletion": "on"
+  "files.autoSaveDelay": 500,
+  "files.autoSave": "afterDelay",
+  "files.autoGuessEncoding": true,
+  "editor.quickSuggestions": {
+    "other": "on",
+    "comments": "off",
+    "strings": "on"
+  },
+  "editor.tabSize": 2,
+  "editor.formatOnSave": true,
+  "prettier.semi": true,
+  "javascript.format.insertSpaceBeforeFunctionParenthesis": true,
+  "vetur.format.defaultFormatter.html": "js-beautify-html",
+  "vetur.format.defaultFormatter.js": "vscode-typescript",
+  "vetur.format.defaultFormatterOptions": {
+    "js-beautify-html": {
+      "wrap_attributes": "force-aligned"
+    }
+  },
+  "eslint.validate": ["javascript", "html", "vue"],
+  "eslint.nodePath": "C:\\Program Files\\nodejs",
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "prettier.bracketSameLine": true,
+  "prettier.tabWidth": 2,
+  "editor.tabCompletion": "on",
+  "liveServer.settings.port": 5501
 }
